--- a/frontend/web/source_assets/css/homepage.less
+++ b/frontend/web/source_assets/css/homepage.less
@@ -36,6 +36,10 @@ body.homepage {
       position: absolute;
       overflow: hidden;
 
+      img {
+        width: 100vw;
+      }
+
       &.animated {
         animation-duration: 5s;
         animation-name: changewidth;
