--- a/frontend/web/source_assets/css/map.less
+++ b/frontend/web/source_assets/css/map.less
@@ -17,6 +17,10 @@ body.map {
       max-width: 220px;
     }
 
+    @media (max-width: 700px) {
+      display: none;
+    }
+
     &.full {
       flex: 0 0 100%;
     }
